send email and sms operations were updated and methods were changedfor SOLID